--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,8 +1,7 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
+#    Makefile                                           :+:      :+:    :+:    # #                                                     +:+ +:+         +:+      #
 #    By: fbesson <fbesson@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/24 14:54:14 by fbesson           #+#    #+#              #
@@ -27,7 +26,7 @@ ft_memmove.c ft_memset.c ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
 ft_putstr_fd.c ft_split.c ft_strchr.c ft_strdup.c ft_striteri.c ft_strjoin.c \
 ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c ft_strnstr.c \
 ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c \
-printf.c put.c ft_cmp_nb.c \
+printf.c put.c ft_cmp_nb.c ft_process_av.c ft_count_ac.c \
 
 BONUS = ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c \
 ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c \
@@ -54,5 +53,3 @@ fclean: clean
 	@/bin/rm -f $(NAME) 
 
 re: fclean all
-
-
